--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "nestjs-pino": "^1.2.0",
     "pino-pretty": "^4.3.0",
@@ -49,6 +50,7 @@
     "@nestjs/testing": "^7.0.0",
     "@prisma/cli": "^2.8.1",
     "@types/bcrypt": "^3.0.0",
+    "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.3",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.8",
