--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@prisma/client": "^2.8.1",
     "@types/cookie-parser": "^1.4.2",
+    "aws-sdk": "^2.771.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
