--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "server",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "workspaces": [
+    "apps/*"
+  ],
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -19,44 +18,28 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./apps/server/test/jest-e2e.json",
     "prisma:generate": "npx prisma introspect && npx prisma generate",
     "postinstall": "npm run prisma:generate"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
-    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
-    "@nestjs/jwt": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
-    "@prisma/client": "^2.8.1",
-    "@types/cookie-parser": "^1.4.2",
-    "aws-sdk": "^2.771.0",
-    "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "cookie-parser": "^1.4.5",
-    "crypto-js": "^4.0.0",
-    "express": "^4.17.1",
-    "nestjs-pino": "^1.2.0",
-    "pino-pretty": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
-    "uuid": "^8.3.1"
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@prisma/cli": "^2.8.1",
-    "@types/bcrypt": "^3.0.0",
-    "@types/crypto-js": "^4.0.1",
-    "@types/express": "^4.17.3",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.8",
     "@types/supertest": "^2.0.8",
-    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "eslint": "^7.11.0",
@@ -84,12 +67,15 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
     "testRegex": ".spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/apps/"
+    ]
   }
 }
