templates-renderer lib

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@muil/server",
   "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "@nestjs/config": "^0.5.0",
     "@nestjs/jwt": "^7.1.0",
@@ -12,6 +13,9 @@
     "express": "^4.17.1",
     "nestjs-pino": "^1.2.0",
     "pino-pretty": "^4.3.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "styled-components": "^5.2.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
@@ -19,6 +23,9 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.3",
+    "@types/react": "^16.9.52",
+    "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.4",
     "@types/uuid": "^8.3.0"
   }
 }
