--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,19 @@
       "protocol": "auto",
       "port": 9229,
       "autoAttachChildProcesses": true
+    },
+    {
+      "name": "Jest",
+      "type": "node",
+      "request": "launch",
+      "runtimeArgs": [
+        "--inspect-brk",
+        "${workspaceRoot}/node_modules/.bin/jest",
+        "--runInBand"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "port": 9229
     }
   ]
 }
