--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -9,7 +9,8 @@
     "html-minifier": "^4.0.0",
     "juice": "^7.0.0",
     "puppeteer-core": "^5.3.1",
-    "require-from-string": "^2.0.2"
+    "request": "^2.88.2",
+    "vm2": "^3.9.2"
   },
   "peerDependencies": {
     "react": "^16.12.0",
