--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "glob": "^7.1.6",
     "nestjs-pino": "^1.2.0",
+    "nodemailer": "^6.4.14",
     "pino-pretty": "^4.3.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -29,6 +30,7 @@
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.4",
-    "@types/uuid": "^8.3.0"
+    "@types/uuid": "^8.3.0",
+    "nodemailer": "^6.4.14"
   }
 }
