--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/server/src/main",
+    "start:prod": "node dist/apps/api/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint-staged": "prettier --config .prettierrc --write \"{src,apps,libs,test}/**/*.ts\" && git add . && eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/server/test/jest-e2e.json",
+    "test:e2e": "jest --config ./apps/api/test/jest-e2e.json",
     "prisma:generate": "npx prisma introspect && npx prisma generate",
     "postinstall": "npm run prisma:generate"
   },
