--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
     "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.3",
     "@types/glob": "^7.1.3",
+    "@types/nodemailer": "^6.4.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.4",
