--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,9 +7,11 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/jwt": "^7.1.0",
     "@prisma/client": "^2.9.0",
+    "@sentry/node": "^5.27.0",
     "aws-sdk": "^2.771.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "glob": "^7.1.6",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
     "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.3",
     "@types/glob": "^7.1.3",
