--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "muil",
   "private": true,
   "license": "UNLICENSED",
   "workspaces": [
@@ -15,6 +16,7 @@
     "start:prod": "node dist/apps/api/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint-staged": "prettier --config .prettierrc --write \"{src,apps,libs,test}/**/*.ts\" && git add . && eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lerna:publish": "lerna publish",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -50,6 +52,7 @@
     "husky": "^4.3.0",
     "jest": "^26.5.2",
     "jest-config": "^26.5.3",
+    "lerna": "^3.22.1",
     "prettier": "^2.1.2",
     "supertest": "^5.0.0",
     "ts-jest": "^26.4.1",
