--- a/libs/cloud-storage/package.json
+++ b/libs/cloud-storage/package.json
@@ -5,5 +5,13 @@
   "main": "dist/libs/cloud-storage/src/index.js",
   "scripts": {
     "build": "tsc"
+  },
+  "dependencies": {
+    "@azure/storage-file": "^10.3.0",
+    "aws-sdk": "^2.781.0",
+    "cloudinary": "^1.23.0",
+    "file-type": "^16.0.0",
+    "streamifier": "^0.1.1",
+    "uuid": "^8.3.1"
   }
 }
