--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@muil/cloud-storage": "1.0.0",
     "@muil/templates-renderer": "1.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/jwt": "^7.1.0",
