--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,9 +3,46 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack serve --mode development --env development"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-export-default-from": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@svgr/webpack": "^5.4.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "react-refresh": "^0.9.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.3.2",
+    "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.0",
+    "dayjs": "^1.9.4",
+    "final-form": "^4.20.1",
+    "final-form-calculate": "^1.3.2",
+    "password-validator": "^5.1.0",
+    "prismjs": "^1.22.0",
+    "qs": "^6.9.4",
+    "rc-tooltip": "^5.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
+    "react-helmet": "^6.1.0",
+    "react-query": "^2.25.2",
+    "react-query-devtools": "^2.6.1",
+    "react-router-dom": "^5.2.0",
+    "react-simple-code-editor": "^0.11.0",
+    "react-virtualized": "^9.22.2",
+    "recharts": "^1.8.5",
+    "styled-components": "^5.2.1"
   }
 }
