--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"apps/**/*.{ts,js}\" \"libs/**/*.ts\"",
+    "format": "prettier --write \"apps/**/*.{ts,tsx,js,jsx}\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/api/src/main",
     "start:client": "yarn workspace @muil/client start",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint-staged": "prettier --config .prettierrc --write \"{src,apps,libs,test}/**/*.ts\" && git add . && eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx,js,jsx}\" --fix",
+    "lint-staged": "prettier --config .prettierrc --write \"{src,apps,libs,test}/**/*.{ts,tsx,js,jsx}\" && git add . && eslint \"{src,apps,libs,test}/**/*.{ts,tsx,js,jsx}\"",
     "lerna:publish": "lerna publish",
     "test": "jest",
     "test:watch": "jest --watch",
