--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
     "pino-pretty": "^4.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "rimraf": "^3.0.2",
     "styled-components": "^5.2.0",
     "uuid": "^8.3.1"
   },
@@ -33,6 +34,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
+    "@types/rimraf": "^3.0.0",
     "@types/styled-components": "^5.1.4",
     "@types/uuid": "^8.3.0",
     "nodemailer": "^6.4.14"
