--- a/package.json
+++ b/package.json
@@ -99,6 +99,6 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx}": "prettier --write"
+    "*.{ts,tsx,js,jsx}": ["eslint", "prettier --write"]
   }
 }
