--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,7 @@
     "@muil/templates-renderer": "1.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/jwt": "^7.1.0",
+    "@nestjs/serve-static": "^2.1.3",
     "@prisma/client": "^2.9.0",
     "@sentry/node": "^5.27.0",
     "bcrypt": "^5.0.0",
