--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/api/test/jest-e2e.json",
-    "prisma:generate": "npx prisma introspect && npx prisma generate"
+    "prisma:dbpush": "npx prisma db push --preview-feature",
+    "prisma:introspect": "npx prisma introspect",
+    "prisma:generate": "npx prisma generate"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
@@ -49,12 +51,12 @@
     "eslint": "^7.11.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard": "^16.0.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-standard": "^4.0.1",
     "husky": ">=4",
     "jest": "^26.5.2",
@@ -62,7 +64,7 @@
     "lerna": "^3.22.1",
     "lint-staged": ">=10",
     "prettier": "^2.1.2",
-    "supertest": "^5.0.0",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.1",
     "ts-loader": "^8.0.4",
     "ts-node": "9.0.0",
