--- a/libs/cloud-storage/package.json
+++ b/libs/cloud-storage/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@muil/cloud-storage",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "license": "MIT",
-  "main": "dist/libs/cloud-storage/src/index.js",
+  "main": "index.js",
+  "files": [
+    "../../dist/libs/cloud-storage/src/**/*"
+  ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepublish": "tsc"
   },
   "dependencies": {
     "aws-sdk": "^2.781.0",
