--- a/libs/templates-renderer/tsconfig.json
+++ b/libs/templates-renderer/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "../../dist/libs/templates-renderer/src"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+  "exclude": ["node_modules", "a", "test", "**/*spec.ts"]
 }
