--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@muil/templates-renderer",
-  "version": "1.1.4",
+  "version": "1.1.2",
   "license": "MIT",
   "main": "index.js",
   "files": [
-    "a"
+    "../../test/**/*"
   ],
   "scripts": {
     "build": "tsc",
