--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "index.js",
   "files": [
-    "../../test/**/*"
+    "./dist/**/*"
   ],
   "scripts": {
     "build": "tsc",
