--- a/libs/cloud-storage/package.json
+++ b/libs/cloud-storage/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "index.js",
   "files": [
-    "../../dist/libs/cloud-storage/src/**/*"
+    "./dist/**/*"
   ],
   "scripts": {
     "build": "tsc",
