--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@muil/templates-renderer",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "license": "MIT",
   "main": "index.js",
   "files": [
-    "./dist/**/*"
+    "dist/**/*"
   ],
   "scripts": {
     "build": "tsc",
