--- a/libs/cloud-storage/package.json
+++ b/libs/cloud-storage/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@muil/cloud-storage",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
-    "./dist/**/*"
+    "dist/**/*"
   ],
   "scripts": {
     "build": "tsc",
