--- a/libs/cloud-storage/package.json
+++ b/libs/cloud-storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muil/cloud-storage",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -11,6 +11,7 @@
     "prepublish": "tsc"
   },
   "dependencies": {
+    "@nestjs/common": "^7.5.3",
     "aws-sdk": "^2.781.0",
     "cloudinary": "^1.23.0",
     "file-type": "^16.0.0",
