--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muil/templates-renderer",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -11,6 +11,7 @@
     "prepublish": "tsc"
   },
   "dependencies": {
+    "@nestjs/common": "^7.5.3",
     "html-minifier": "^4.0.0",
     "juice": "^7.0.0",
     "puppeteer-core": "^5.3.1",
