--- a/libs/cloud-storage/package.json
+++ b/libs/cloud-storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muil/cloud-storage",
-  "version": "1.1.9",
+  "version": "1.2.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -15,6 +15,8 @@
     "aws-sdk": "^2.781.0",
     "cloudinary": "^1.23.0",
     "file-type": "^16.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.4",
     "streamifier": "^0.1.1",
     "uuid": "^8.3.1"
   }
