--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muil/templates-renderer",
-  "version": "1.1.9",
+  "version": "1.2.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -15,7 +15,9 @@
     "html-minifier": "^4.0.0",
     "juice": "^7.0.0",
     "puppeteer-core": "^5.3.1",
+    "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
+    "rxjs": "^6.5.4",
     "uuid": "^8.3.1",
     "vm2": "^3.9.2"
   },
