--- a/libs/cloud-storage/package.json
+++ b/libs/cloud-storage/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@muil/cloud-storage",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
-    "dist/**/*"
+    "dist"
   ],
   "scripts": {
     "build": "tsc",
-    "prepublish": "tsc"
+    "prepublish": "tsc && cp -r ../../dist/libs/cloud-storage/dist dist"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.3",
