--- a/libs/templates-renderer/tsconfig.json
+++ b/libs/templates-renderer/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "outDir": "./dist"
+    "outDir": "../../dist/libs/templates-renderer/dist"
   },
   "include": ["src/**/*", "package.json"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
