add import/order rule

--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -21,6 +21,7 @@
   "rules": {
     "no-tabs": ["off"],
     "indent": "off",
+    "multiline-ternary": "off",
     "linebreak-style": ["error", "unix"],
     "semi": ["error", "always"],
     "comma-dangle": ["error", "only-multiline"],
