--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muil/templates-renderer",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "prepublish": "tsc && cp -r ../../dist/libs/templates-renderer/dist dist"
+    "prepublish": "cp -r ../../dist/libs/templates-renderer/src dist"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.3",
