--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@muil/templates-renderer",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
     "build": "tsc",
-    "prepublish": "rimraf dist && cp -r ../../dist/libs/templates-renderer/src dist",
-    "postpublish": "rimraf dist"
+    "prepublish": "rimraf dist && mv src temp_src && npm run build && cp -r ../../dist/libs/templates-renderer/src src",
+    "postpublish": "rimraf dist && mv temp_src src"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.3",
