--- a/libs/cloud-storage/package.json
+++ b/libs/cloud-storage/package.json
@@ -2,14 +2,15 @@
   "name": "@muil/cloud-storage",
   "version": "1.3.3",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "tsc",
-    "prepublish": "rimraf dist && tsc && cp -r ../../dist/libs/cloud-storage/src dist",
-    "postpublish": "rimraf dist"
+    "prepublish": "npm run build && mv src temp_src && cp -r ../../dist/libs/cloud-storage/dist src",
+    "postpublish": "rimraf dist && mv temp_src src"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.3",
@@ -20,5 +21,6 @@
     "rxjs": "^6.5.4",
     "streamifier": "^0.1.1",
     "uuid": "^8.3.1"
-  }
+  },
+  "gitHead": "2f45c65219d64c0e98d43e730a7b8a2c4b191903"
 }
