--- a/libs/cloud-storage/package.json
+++ b/libs/cloud-storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muil/cloud-storage",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "license": "MIT",
   "main": "src/index.js",
   "files": [
@@ -10,7 +10,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc",
     "prepublish": "npm run build && mv src temp_src && cp -r ../../dist/libs/cloud-storage/dist src",
-    "postpublish": "rimraf dist && mv temp_src src"
+    "postpublish": "rimraf dist && rimraf src && mv temp_src src"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.3",
