--- a/libs/cloud-storage/package.json
+++ b/libs/cloud-storage/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nestjs/common": "^7.5.3",
     "aws-sdk": "^2.781.0",
+    "body-parser": "^1.19.0",
     "cloudinary": "^1.23.0",
     "file-type": "^16.0.0",
     "reflect-metadata": "^0.1.13",
