--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@muil/cloud-storage": "1.3.0",
-    "@muil/templates-renderer": "1.3.0",
-    "@nestjs/config": "^0.5.0",
+    "@muil/cloud-storage": "^1.3.6",
+    "@muil/templates-renderer": "^1.3.6",
+    "@nestjs/config": "^0.6.1",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/serve-static": "^2.1.3",
     "@prisma/client": "^2.9.0",
     "@sentry/node": "^5.27.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
