--- a/package.json
+++ b/package.json
@@ -50,14 +50,14 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-config-standard": "^16.0.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-standard": "^5.0.0",
     "husky": ">=4",
     "jest": "^26.5.2",
     "jest-config": "^26.5.3",
@@ -67,7 +67,7 @@
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.1",
     "ts-loader": "^8.0.4",
-    "ts-node": "9.0.0",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3"
   },
