--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "build:client": "yarn workspace @muil/client build",
+    "build:admin": "yarn workspace @muil/admin build",
     "format": "prettier --write \"{src,apps,libs,test}/**/*.{ts,tsx,js,jsx}\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/api/src/main",
     "start:client": "yarn workspace @muil/client start",
+    "start:admin": "yarn workspace @muil/admin start",
     "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx,js,jsx}\"",
     "lerna:publish": "lerna publish",
     "test": "jest",
