--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "prebuild": "rimraf dist",
-    "postinstall": "prisma:generate",
+    "postinstall": "npm run prisma:generate",
     "build": "nest build",
     "build:client": "yarn workspace @muil/client build",
     "format": "prettier --write \"{src,apps,libs,test}/**/*.{ts,tsx,js,jsx}\"",
