--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "webpack serve --mode development --env development",
+    "start": "cross-env BASE_URL=https://app.muil.io webpack serve --mode development --env development",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
