--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@prisma/cli": "^2.8.1",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.8",
     "@types/supertest": "^2.0.8",
@@ -66,6 +65,7 @@
     "lerna": "^3.22.1",
     "lint-staged": ">=10",
     "prettier": "^2.1.2",
+    "prisma": "^2.16.0",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.1",
     "ts-loader": "^8.0.4",
