--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muil",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "workspaces": [
     "apps/*",
     "libs/*"
