--- a/apps/devops/package.json
+++ b/apps/devops/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@pulumi/aws": "^4.0.0",
     "@pulumi/awsx": "^0.30.0",
-    "@pulumi/pulumi": "^3.0.0"
+    "@pulumi/pulumi": "^3.0.0",
+    "uuid": "^8.3.2"
   }
 }
