--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -19,6 +19,7 @@
     "puppeteer-core": "^9.1.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
+    "rxjs": "^6.5.4",
     "uuid": "^8.3.1",
     "vm2": "3.9.2"
   },
