--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.3",
+    "he": "^1.2.0",
     "html-minifier": "^4.0.0",
     "juice": "^7.0.0",
     "puppeteer-core": "^14.0.0",
@@ -29,6 +30,7 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@types/he": "^1.1.2",
     "@types/html-minifier": "^4.0.0",
     "@types/puppeteer-core": "^5.4.0",
     "@types/require-from-string": "^1.2.0"
