--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -14,24 +14,21 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.3",
+    "@sparticuz/chromium": "^123.0.1",
     "he": "^1.2.0",
     "html-minifier": "^4.0.0",
     "juice": "^7.0.0",
-    "puppeteer-core": "^14.0.0",
+    "puppeteer-core": "^22.6.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
-    "uuid": "^8.3.1",
-    "vm2": "3.9.19"
-  },
-  "peerDependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "styled-components": "^5.2.0"
+    "styled-components": "^6.1.11",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@types/he": "^1.1.2",
     "@types/html-minifier": "^4.0.0",
-    "@types/puppeteer-core": "^5.4.0",
     "@types/require-from-string": "^1.2.0"
   },
   "gitHead": "e929b01dad7dab9d40a60933244c923f0916a4a2"
