--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -19,11 +19,8 @@
     "html-minifier": "^4.0.0",
     "juice": "^7.0.0",
     "puppeteer-core": "^22.6.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
-    "styled-components": "^6.1.11",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
@@ -31,5 +28,10 @@
     "@types/html-minifier": "^4.0.0",
     "@types/require-from-string": "^1.2.0"
   },
-  "gitHead": "e929b01dad7dab9d40a60933244c923f0916a4a2"
+  "peerDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.11"
+  },
+  "gitHead": "ea759254df1b2862d22c5ad97715bb2edfbbd736"
 }
