--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "class-transformer": "0.4.0",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
