--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@muil/api",
-  "version": "2.1.1",
+  "version": "2.2.0-alpha.0",
   "private": true,
   "dependencies": {
     "@muil/cloud-storage": "^2.0.0",
-    "@muil/templates-renderer": "^2.1.1",
+    "@muil/templates-renderer": "^2.2.0-alpha.0",
     "@nestjs/config": "^0.6.1",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/serve-static": "^2.1.3",
