--- a/libs/templates-renderer/package.json
+++ b/libs/templates-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muil/templates-renderer",
-  "version": "2.1.1",
+  "version": "2.2.0-alpha.0",
   "license": "MIT",
   "main": "src/index.js",
   "files": [
